--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -88,8 +88,11 @@
     <Compile Include="Models\Admin\SistemaParametro.cs" />
     <Compile Include="Models\Admin\Usuario.cs" />
     <Compile Include="Models\Cap\Banco.cs" />
+    <Compile Include="Models\Cap\Departamento.cs" />
+    <Compile Include="Models\Cap\Empresa.cs" />
     <Compile Include="Models\Cap\FPgto.cs" />
     <Compile Include="Models\Cap\Pgto.cs" />
+    <Compile Include="Models\Cap\Socio.cs" />
     <Compile Include="Models\Email\EmailCredential.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respository\EFDbContext.cs" />
@@ -101,8 +104,11 @@
     <Compile Include="Service\Admin\SistemaParametroService.cs" />
     <Compile Include="Service\Admin\UsuarioService.cs" />
     <Compile Include="Service\Cap\BancoService.cs" />
+    <Compile Include="Service\Cap\DepartamentoService.cs" />
+    <Compile Include="Service\Cap\EmpresaService.cs" />
     <Compile Include="Service\Cap\FPgtoService.cs" />
     <Compile Include="Service\Cap\PgtoService.cs" />
+    <Compile Include="Service\Cap\SocioService.cs" />
     <Compile Include="Service\Email\EnviarEmail.cs" />
   </ItemGroup>
   <ItemGroup>
