--- a/Cap.Web.Tests/Cap.Web.Tests.csproj
+++ b/Cap.Web.Tests/Cap.Web.Tests.csproj
@@ -103,6 +103,9 @@
     <Compile Include="Cap\BancoUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Service\Cap\DepartamentoServiceTests.cs" />
+    <Compile Include="Service\Cap\EmpresaServiceTests.cs" />
+    <Compile Include="Service\Cap\SocioServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
