ReqRequisicao - em andamento

--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -91,11 +91,13 @@
     <Compile Include="Models\Cap\Departamento.cs" />
     <Compile Include="Models\Cap\Empresa.cs" />
     <Compile Include="Models\Cap\FPgto.cs" />
-    <Compile Include="Models\Cap\Material.cs" />
-    <Compile Include="Models\Cap\MatGrupo.cs" />
+    <Compile Include="Models\Requisicao\Material.cs" />
+    <Compile Include="Models\Requisicao\MatGrupo.cs" />
     <Compile Include="Models\Cap\Pgto.cs" />
     <Compile Include="Models\Cap\Socio.cs" />
-    <Compile Include="Models\Cap\Unidade.cs" />
+    <Compile Include="Models\Requisicao\ReqMaterial.cs" />
+    <Compile Include="Models\Requisicao\ReqRequisicao.cs" />
+    <Compile Include="Models\Requisicao\Unidade.cs" />
     <Compile Include="Models\Email\EmailCredential.cs" />
     <Compile Include="Models\Gen\Agenda.cs" />
     <Compile Include="Models\Gen\AgendaEmail.cs" />
@@ -113,11 +115,13 @@
     <Compile Include="Service\Cap\DepartamentoService.cs" />
     <Compile Include="Service\Cap\EmpresaService.cs" />
     <Compile Include="Service\Cap\FPgtoService.cs" />
-    <Compile Include="Service\Cap\MaterialService.cs" />
-    <Compile Include="Service\Cap\MatGrupoService.cs" />
+    <Compile Include="Service\Requisicao\MaterialService.cs" />
+    <Compile Include="Service\Requisicao\MatGrupoService.cs" />
     <Compile Include="Service\Cap\PgtoService.cs" />
     <Compile Include="Service\Cap\SocioService.cs" />
-    <Compile Include="Service\Cap\UnidadeService.cs" />
+    <Compile Include="Service\Requisicao\ReqMaterialService.cs" />
+    <Compile Include="Service\Requisicao\ReqRequisicaoService.cs" />
+    <Compile Include="Service\Requisicao\UnidadeService.cs" />
     <Compile Include="Service\Email\EnviarEmail.cs" />
     <Compile Include="Service\Gen\AgendaEmailService.cs" />
     <Compile Include="Service\Gen\AgendaService.cs" />
