--- a/Cap.Web.Tests/Cap.Web.Tests.csproj
+++ b/Cap.Web.Tests/Cap.Web.Tests.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Service\Gen\AgendaServiceTests.cs" />
     <Compile Include="Service\Gen\AGendaTelefone.cs" />
     <Compile Include="Service\Gen\AgendaTelefoneServiceTests.cs" />
+    <Compile Include="Service\Requisicao\ReqMaterialServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
