--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -174,6 +174,16 @@
     <Compile Include="App_Start\IocConfig.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Common\AreaAuthorizeAttribute.cs" />
+    <Compile Include="Common\Bind\BindBancoHelper.cs" />
+    <Compile Include="Common\Bind\BindDepartamentoHelper.cs" />
+    <Compile Include="Common\Bind\BindEmpresaHelper.cs" />
+    <Compile Include="Common\Bind\BindEstadoCivilHelper.cs" />
+    <Compile Include="Common\Bind\BindEstadoHelper.cs" />
+    <Compile Include="Common\Bind\BindFPgtoHelper.cs" />
+    <Compile Include="Common\Bind\BindPgtoHelper.cs" />
+    <Compile Include="Common\EnumDescription.cs" />
+    <Compile Include="Common\Identification.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -223,7 +233,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Common\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
