--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -176,6 +176,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\EstadoCivilController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\EstadoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\basico\FeriadoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\basico\SistemaParametroController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\PgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\HomeController.cs" />
     <Compile Include="Areas\Erp\Controllers\LoginController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
@@ -220,6 +224,32 @@
     <Content Include="Areas\Erp\Views\Estado\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Estado\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Estado\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\EstadoCivil\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\EstadoCivil\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\EstadoCivil\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\EstadoCivil\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\EstadoCivil\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Feriado\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Feriado\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Feriado\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Feriado\Feriados.cshtml" />
+    <Content Include="Areas\Erp\Views\Feriado\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Feriado\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaParametro\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaParametro\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaParametro\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaParametro\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaParametro\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Pgto\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Pgto\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Pgto\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Pgto\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Pgto\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\FPgto\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\FPgto\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\FPgto\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\FPgto\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\FPgto\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -249,7 +279,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Erp\Views\EstadoCivil\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
