--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Areas\Erp\Controllers\basico\EstadoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\FeriadoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\SistemaParametroController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\HomeController.cs" />
@@ -250,6 +251,11 @@
     <Content Include="Areas\Erp\Views\FPgto\Create.cshtml" />
     <Content Include="Areas\Erp\Views\FPgto\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\FPgto\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Empresa\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Empresa\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Empresa\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Empresa\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Empresa\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
