Agenda em andamento

--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -174,13 +174,16 @@
     <Compile Include="App_Start\IocConfig.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Areas\Erp\Controllers\AgendaController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\EstadoCivilController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\EstadoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\FeriadoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\SistemaParametroController.cs" />
+    <Compile Include="Areas\Erp\Controllers\basico\UsuarioController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PgtoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\SocioController.cs" />
     <Compile Include="Areas\Erp\Controllers\HomeController.cs" />
     <Compile Include="Areas\Erp\Controllers\LoginController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
@@ -256,6 +259,19 @@
     <Content Include="Areas\Erp\Views\Empresa\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Empresa\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Empresa\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Socio\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Socio\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Socio\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Socio\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Socio\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Usuario\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Usuario\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Usuario\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Usuario\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Usuario\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Agenda\Contatos.cshtml" />
+    <Content Include="Areas\Erp\Views\Agenda\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Agenda\Details.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
