--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Areas\Erp\Controllers\basico\FeriadoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\SistemaParametroController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\UsuarioController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\BancoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PgtoController.cs" />
@@ -272,6 +273,11 @@
     <Content Include="Areas\Erp\Views\Agenda\Contatos.cshtml" />
     <Content Include="Areas\Erp\Views\Agenda\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Agenda\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Banco\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Banco\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Banco\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Banco\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Banco\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
