--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -187,6 +187,9 @@
     <Compile Include="Areas\Erp\Controllers\cap\SocioController.cs" />
     <Compile Include="Areas\Erp\Controllers\HomeController.cs" />
     <Compile Include="Areas\Erp\Controllers\LoginController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\MaterialController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\MatGrupoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\UnidadeController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
     <Compile Include="Areas\Erp\Models\LoginUsuario.cs" />
     <Compile Include="Common\AreaAuthorizeAttribute.cs" />
@@ -196,7 +199,9 @@
     <Compile Include="Common\Bind\BindEstadoCivilHelper.cs" />
     <Compile Include="Common\Bind\BindEstadoHelper.cs" />
     <Compile Include="Common\Bind\BindFPgtoHelper.cs" />
+    <Compile Include="Common\Bind\BindMatGrupoHelper.cs" />
     <Compile Include="Common\Bind\BindPgtoHelper.cs" />
+    <Compile Include="Common\Bind\BindUnidadeHelper.cs" />
     <Compile Include="Common\EnumDescription.cs" />
     <Compile Include="Common\Identification.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -278,6 +283,22 @@
     <Content Include="Areas\Erp\Views\Banco\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Banco\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Banco\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Unidade\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Unidade\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Unidade\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Unidade\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Unidade\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\MatGrupo\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\MatGrupo\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\MatGrupo\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\MatGrupo\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\MatGrupo\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Material\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Material\Materiais.cshtml" />
+    <Content Include="Areas\Erp\Views\Material\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Material\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Material\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Material\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
