--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -303,6 +303,13 @@
     <Content Include="Areas\Erp\Views\Material\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\Email\Emails.cshtml" />
     <Content Include="Areas\Erp\Views\Telefone\Telefones.cshtml" />
+    <Content Include="Areas\Erp\Views\Agenda\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Telefone\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Telefone\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Telefone\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Email\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Email\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Email\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
