--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -310,6 +310,7 @@
     <Content Include="Areas\Erp\Views\Email\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Email\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Email\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Agenda\Create.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
