--- a/Cap.Web.Tests/Cap.Web.Tests.csproj
+++ b/Cap.Web.Tests/Cap.Web.Tests.csproj
@@ -103,15 +103,17 @@
     <Compile Include="Cap\BancoUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Service\Cap\BancoServiceTests.cs" />
     <Compile Include="Service\Cap\DepartamentoServiceTests.cs" />
+    <Compile Include="Service\Cap\DepositoServiceTests.cs" />
     <Compile Include="Service\Cap\EmpresaServiceTests.cs" />
     <Compile Include="Service\Cap\MaterialServiceTests.cs" />
     <Compile Include="Service\Cap\MatGrupoServiceTests.cs" />
+    <Compile Include="Service\Cap\MoedaServiceTests.cs" />
     <Compile Include="Service\Cap\SocioServiceTests.cs" />
     <Compile Include="Service\Cap\UnidadeServiceTests.cs" />
     <Compile Include="Service\Gen\AgendaEmailServiceTests.cs" />
     <Compile Include="Service\Gen\AgendaServiceTests.cs" />
-    <Compile Include="Service\Gen\AGendaTelefone.cs" />
     <Compile Include="Service\Gen\AgendaTelefoneServiceTests.cs" />
     <Compile Include="Service\Requisicao\ReqMaterialServiceTests.cs" />
     <Compile Include="Service\Requisicao\ReqRequisicaoServiceTests.cs" />
