--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -181,8 +181,10 @@
     <Compile Include="Areas\Erp\Controllers\basico\SistemaParametroController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\UsuarioController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\BancoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\DepositoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\MoedaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\SocioController.cs" />
     <Compile Include="Areas\Erp\Controllers\EmailController.cs" />
@@ -311,6 +313,14 @@
     <Content Include="Areas\Erp\Views\Email\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Email\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\Agenda\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Moeda\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Moeda\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Moeda\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Moeda\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Moeda\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Deposito\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Deposito\Depositos.cshtml" />
+    <Content Include="Areas\Erp\Views\Deposito\Details.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
