--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -91,8 +92,10 @@
     <Compile Include="Models\Cap\Departamento.cs" />
     <Compile Include="Models\Cap\Deposito.cs" />
     <Compile Include="Models\Cap\Empresa.cs" />
+    <Compile Include="Models\Cap\Fornecedor.cs" />
     <Compile Include="Models\Cap\FPgto.cs" />
     <Compile Include="Models\Cap\Moeda.cs" />
+    <Compile Include="Models\Cap\Pedido.cs" />
     <Compile Include="Models\Requisicao\Material.cs" />
     <Compile Include="Models\Requisicao\MatGrupo.cs" />
     <Compile Include="Models\Cap\Pgto.cs" />
@@ -117,6 +120,7 @@
     <Compile Include="Service\Cap\DepartamentoService.cs" />
     <Compile Include="Service\Cap\DepositoService.cs" />
     <Compile Include="Service\Cap\EmpresaService.cs" />
+    <Compile Include="Service\Cap\FornecedorService.cs" />
     <Compile Include="Service\Cap\FPgtoService.cs" />
     <Compile Include="Service\Cap\MoedaService.cs" />
     <Compile Include="Service\Requisicao\MaterialService.cs" />
