--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -34,6 +34,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -183,6 +184,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\BancoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\DepositoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\FornecedorController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\MoedaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PgtoController.cs" />
@@ -195,6 +197,7 @@
     <Compile Include="Areas\Erp\Controllers\requisicao\UnidadeController.cs" />
     <Compile Include="Areas\Erp\Controllers\TelefoneController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
+    <Compile Include="Areas\Erp\Models\FornecedorModel.cs" />
     <Compile Include="Areas\Erp\Models\LoginUsuario.cs" />
     <Compile Include="Common\AreaAuthorizeAttribute.cs" />
     <Compile Include="Common\Bind\BindBancoHelper.cs" />
@@ -321,6 +324,15 @@
     <Content Include="Areas\Erp\Views\Deposito\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Deposito\Depositos.cshtml" />
     <Content Include="Areas\Erp\Views\Deposito\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Deposito\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Deposito\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Deposito\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Fornecedor\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Fornecedor\Fornecedores.cshtml" />
+    <Content Include="Areas\Erp\Views\Fornecedor\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Shared\_Agenda.cshtml" />
+    <Content Include="Areas\Erp\Views\Shared\_Telefones.cshtml" />
+    <Content Include="Areas\Erp\Views\Shared\_Emails.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
