--- a/Cap.Web.Tests/Cap.Web.Tests.csproj
+++ b/Cap.Web.Tests/Cap.Web.Tests.csproj
@@ -105,6 +105,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Service\Cap\BancoServiceTests.cs" />
+    <Compile Include="Service\Cap\ContaServiceTests.cs" />
+    <Compile Include="Service\Cap\ContaTipoServiceTests.cs" />
     <Compile Include="Service\Cap\DepartamentoServiceTests.cs" />
     <Compile Include="Service\Cap\DepositoServiceTests.cs" />
     <Compile Include="Service\Cap\EmpresaServiceTests.cs" />
