--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -182,12 +182,15 @@
     <Compile Include="Areas\Erp\Controllers\basico\SistemaParametroController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\UsuarioController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\BancoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\ContaController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\ContaTipoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\DepositoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FornecedorController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\MoedaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PedidoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\PesquisaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\SocioController.cs" />
     <Compile Include="Areas\Erp\Controllers\EmailController.cs" />
@@ -200,15 +203,20 @@
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
     <Compile Include="Areas\Erp\Models\FornecedorModel.cs" />
     <Compile Include="Areas\Erp\Models\LoginUsuario.cs" />
+    <Compile Include="Areas\Erp\Models\PesquisaModel.cs" />
     <Compile Include="Common\AreaAuthorizeAttribute.cs" />
     <Compile Include="Common\Bind\BindBancoHelper.cs" />
+    <Compile Include="Common\Bind\BindContaHelper.cs" />
+    <Compile Include="Common\Bind\BindContaTipoHelper.cs" />
     <Compile Include="Common\Bind\BindDepartamentoHelper.cs" />
     <Compile Include="Common\Bind\BindEmpresaHelper.cs" />
     <Compile Include="Common\Bind\BindEstadoCivilHelper.cs" />
     <Compile Include="Common\Bind\BindEstadoHelper.cs" />
+    <Compile Include="Common\Bind\BindFornecedorHelper.cs" />
     <Compile Include="Common\Bind\BindFPgtoHelper.cs" />
     <Compile Include="Common\Bind\BindMatGrupoHelper.cs" />
     <Compile Include="Common\Bind\BindPgtoHelper.cs" />
+    <Compile Include="Common\Bind\BindSituacaoPagamentoHelper.cs" />
     <Compile Include="Common\Bind\BindUnidadeHelper.cs" />
     <Compile Include="Common\EnumDescription.cs" />
     <Compile Include="Common\Identification.cs" />
@@ -337,6 +345,17 @@
     <Content Include="Areas\Erp\Views\Fornecedor\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Fornecedor\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\Fornecedor\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Pesquisa\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Conta\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Conta\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Conta\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Conta\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Conta\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaTipo\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaTipo\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaTipo\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaTipo\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaTipo\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
