--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -356,6 +356,7 @@
     <Content Include="Areas\Erp\Views\ContaTipo\Create.cshtml" />
     <Content Include="Areas\Erp\Views\ContaTipo\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\ContaTipo\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Pesquisa\Pesquisar.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
