--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -97,7 +97,9 @@
     <Compile Include="Models\Cap\Fornecedor.cs" />
     <Compile Include="Models\Cap\FPgto.cs" />
     <Compile Include="Models\Cap\Moeda.cs" />
+    <Compile Include="Models\Cap\Parcela.cs" />
     <Compile Include="Models\Cap\Pedido.cs" />
+    <Compile Include="Models\Cap\PesquisaModel.cs" />
     <Compile Include="Models\Requisicao\Material.cs" />
     <Compile Include="Models\Requisicao\MatGrupo.cs" />
     <Compile Include="Models\Cap\Pgto.cs" />
@@ -127,7 +129,9 @@
     <Compile Include="Service\Cap\FornecedorService.cs" />
     <Compile Include="Service\Cap\FPgtoService.cs" />
     <Compile Include="Service\Cap\MoedaService.cs" />
+    <Compile Include="Service\Cap\ParcelaService.cs" />
     <Compile Include="Service\Cap\PedidoService.cs" />
+    <Compile Include="Service\Cap\PesquisaService.cs" />
     <Compile Include="Service\Requisicao\MaterialService.cs" />
     <Compile Include="Service\Requisicao\MatGrupoService.cs" />
     <Compile Include="Service\Cap\PgtoService.cs" />
