--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -358,6 +358,7 @@
     <Content Include="Areas\Erp\Views\ContaTipo\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\Parcela\Parcelas.cshtml" />
     <Content Include="Areas\Erp\Views\Pesquisa\Pesquisar.cshtml" />
+    <Content Include="Areas\Erp\Views\Pesquisa\Details.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
