--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -363,6 +363,7 @@
     <Content Include="Areas\Erp\Views\Pedido\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Pedido\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Parcela\ParcelaAdiciona.cshtml" />
+    <Content Include="Areas\Erp\Views\Parcela\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
