--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -362,8 +362,10 @@
     <Content Include="Areas\Erp\Views\Pesquisa\Details.cshtml" />
     <Content Include="Areas\Erp\Views\Pedido\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Pedido\Edit.cshtml" />
-    <Content Include="Areas\Erp\Views\Parcela\ParcelaAdiciona.cshtml" />
+    <Content Include="Areas\Erp\Views\Parcela\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Parcela\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Parcela\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Parcela\Edit.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
