--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -89,6 +89,8 @@
     <Compile Include="Models\Admin\SistemaParametro.cs" />
     <Compile Include="Models\Admin\Usuario.cs" />
     <Compile Include="Models\Cap\Banco.cs" />
+    <Compile Include="Models\Cap\CentroCusto.cs" />
+    <Compile Include="Models\Cap\CentroLucro.cs" />
     <Compile Include="Models\Cap\Conta.cs" />
     <Compile Include="Models\Cap\ContaTipo.cs" />
     <Compile Include="Models\Cap\Departamento.cs" />
@@ -96,6 +98,8 @@
     <Compile Include="Models\Cap\Empresa.cs" />
     <Compile Include="Models\Cap\Fornecedor.cs" />
     <Compile Include="Models\Cap\FPgto.cs" />
+    <Compile Include="Models\Cap\GrupoCusto.cs" />
+    <Compile Include="Models\Cap\GrupoLucro.cs" />
     <Compile Include="Models\Cap\Moeda.cs" />
     <Compile Include="Models\Cap\Parcela.cs" />
     <Compile Include="Models\Cap\ParcelaAdicionaModel.cs" />
@@ -122,6 +126,8 @@
     <Compile Include="Service\Admin\SistemaParametroService.cs" />
     <Compile Include="Service\Admin\UsuarioService.cs" />
     <Compile Include="Service\Cap\BancoService.cs" />
+    <Compile Include="Service\Cap\CentroCustoService.cs" />
+    <Compile Include="Service\Cap\CentroLucroService.cs" />
     <Compile Include="Service\Cap\ContaService.cs" />
     <Compile Include="Service\Cap\ContaTipoService.cs" />
     <Compile Include="Service\Cap\DepartamentoService.cs" />
@@ -129,6 +135,8 @@
     <Compile Include="Service\Cap\EmpresaService.cs" />
     <Compile Include="Service\Cap\FornecedorService.cs" />
     <Compile Include="Service\Cap\FPgtoService.cs" />
+    <Compile Include="Service\Cap\GrupoCustoService.cs" />
+    <Compile Include="Service\Cap\GrupoLucroService.cs" />
     <Compile Include="Service\Cap\MoedaService.cs" />
     <Compile Include="Service\Cap\ParcelaService.cs" />
     <Compile Include="Service\Cap\PedidoService.cs" />
