--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FornecedorController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\GrupoCustoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\MoedaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ParcelaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PedidoController.cs" />
@@ -366,6 +367,10 @@
     <Content Include="Areas\Erp\Views\Parcela\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\Parcela\Details.cshtml" />
     <Content Include="Areas\Erp\Views\Parcela\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoCusto\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoCusto\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoCusto\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoCusto\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
