--- a/Cap.Web.Tests/Cap.Web.Tests.csproj
+++ b/Cap.Web.Tests/Cap.Web.Tests.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Service\Cap\BancoServiceTests.cs" />
+    <Compile Include="Service\Cap\ContaFinanceiraServiceTests.cs" />
     <Compile Include="Service\Cap\ContaServiceTests.cs" />
     <Compile Include="Service\Cap\ContaTipoServiceTests.cs" />
     <Compile Include="Service\Cap\DepartamentoServiceTests.cs" />
@@ -112,6 +113,7 @@
     <Compile Include="Service\Cap\EmpresaServiceTests.cs" />
     <Compile Include="Service\Cap\FornecedorServiceTests.cs" />
     <Compile Include="Service\Cap\GrupoCustoServiceTests.cs" />
+    <Compile Include="Service\Cap\GrupoFinanceiroServiceTests.cs" />
     <Compile Include="Service\Cap\GrupoLucroServiceTests.cs" />
     <Compile Include="Service\Cap\MaterialServiceTests.cs" />
     <Compile Include="Service\Cap\MatGrupoServiceTests.cs" />
