--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -185,12 +185,14 @@
     <Compile Include="Areas\Erp\Controllers\cap\CentroCustoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\CentroLucroController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ContaController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\ContaFinanceiraController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ContaTipoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\DepositoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FornecedorController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\GrupoCustoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\GrupoFinanceiroController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\GrupoLucroController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\MoedaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ParcelaController.cs" />
@@ -385,6 +387,20 @@
     <Content Include="Areas\Erp\Views\CentroCusto\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\CentroCusto\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\CentroLucro\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\CentroLucro\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\CentroLucro\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\CentroLucro\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\CentroLucro\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoFinanceiro\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoFinanceiro\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoFinanceiro\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoFinanceiro\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoFinanceiro\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaFinanceira\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaFinanceira\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaFinanceira\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaFinanceira\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\ContaFinanceira\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
