--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Models\Cap\ParcelaAdicionaModel.cs" />
     <Compile Include="Models\Cap\Pedido.cs" />
     <Compile Include="Models\Cap\PesquisaModel.cs" />
+    <Compile Include="Models\Cap\RegimeTributario.cs" />
     <Compile Include="Models\Requisicao\Material.cs" />
     <Compile Include="Models\Requisicao\MatGrupo.cs" />
     <Compile Include="Models\Cap\Pgto.cs" />
@@ -145,6 +146,7 @@
     <Compile Include="Service\Cap\ParcelaService.cs" />
     <Compile Include="Service\Cap\PedidoService.cs" />
     <Compile Include="Service\Cap\PesquisaService.cs" />
+    <Compile Include="Service\Cap\RegimeTributarioService.cs" />
     <Compile Include="Service\Requisicao\MaterialService.cs" />
     <Compile Include="Service\Requisicao\MatGrupoService.cs" />
     <Compile Include="Service\Cap\PgtoService.cs" />
