--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\PedidoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PesquisaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PgtoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\RegimeTributarioController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\SocioController.cs" />
     <Compile Include="Areas\Erp\Controllers\EmailController.cs" />
     <Compile Include="Areas\Erp\Controllers\HomeController.cs" />
@@ -223,6 +224,7 @@
     <Compile Include="Common\Bind\BindMatGrupoHelper.cs" />
     <Compile Include="Common\Bind\BindMoedaHelper.cs" />
     <Compile Include="Common\Bind\BindPgtoHelper.cs" />
+    <Compile Include="Common\Bind\BindRegimeTributarioHelper.cs" />
     <Compile Include="Common\Bind\BindSituacaoPagamentoHelper.cs" />
     <Compile Include="Common\Bind\BindTipoContaHelper.cs" />
     <Compile Include="Common\Bind\BindUnidadeHelper.cs" />
@@ -402,6 +404,11 @@
     <Content Include="Areas\Erp\Views\ContaFinanceira\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\ContaFinanceira\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\ContaFinanceira\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\RegimeTributario\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\RegimeTributario\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\RegimeTributario\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\RegimeTributario\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\RegimeTributario\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
