--- a/Cap.Web.Tests/Cap.Web.Tests.csproj
+++ b/Cap.Web.Tests/Cap.Web.Tests.csproj
@@ -104,6 +104,8 @@
     <Compile Include="Cap\BancoUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Service\Admin\SistemaAreaServiceTests.cs" />
+    <Compile Include="Service\Admin\SistemaRegraServiceTests.cs" />
     <Compile Include="Service\Cap\BancoServiceTests.cs" />
     <Compile Include="Service\Cap\ContaFinanceiraServiceTests.cs" />
     <Compile Include="Service\Cap\ContaServiceTests.cs" />
