--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Models\Admin\Estado.cs" />
     <Compile Include="Models\Admin\EstadoCivil.cs" />
     <Compile Include="Models\Admin\Feriado.cs" />
+    <Compile Include="Models\Admin\Grupo.cs" />
     <Compile Include="Models\Admin\SistemaArea.cs" />
     <Compile Include="Models\Admin\SistemaParametro.cs" />
     <Compile Include="Models\Admin\SistemaRegra.cs" />
@@ -129,6 +130,7 @@
     <Compile Include="Service\Admin\EstadoCivilService.cs" />
     <Compile Include="Service\Admin\EstadoService.cs" />
     <Compile Include="Service\Admin\FeriadoService.cs" />
+    <Compile Include="Service\Admin\GrupoService.cs" />
     <Compile Include="Service\Admin\SistemaAreaService.cs" />
     <Compile Include="Service\Admin\SistemaParametroService.cs" />
     <Compile Include="Service\Admin\SistemaRegraService.cs" />
