--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -180,7 +180,10 @@
     <Compile Include="Areas\Erp\Controllers\basico\EstadoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\FeriadoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\GrupoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\basico\SistemaAreaController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\SistemaParametroController.cs" />
+    <Compile Include="Areas\Erp\Controllers\basico\SistemaRegraController.cs" />
+    <Compile Include="Areas\Erp\Controllers\basico\SistemaTelaController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\UsuarioController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\BancoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\CentroCustoController.cs" />
@@ -227,6 +230,8 @@
     <Compile Include="Common\Bind\BindMoedaHelper.cs" />
     <Compile Include="Common\Bind\BindPgtoHelper.cs" />
     <Compile Include="Common\Bind\BindRegimeTributarioHelper.cs" />
+    <Compile Include="Common\Bind\BindSistemaAreaHelper.cs" />
+    <Compile Include="Common\Bind\BindSistemaRegraHelper.cs" />
     <Compile Include="Common\Bind\BindSituacaoPagamentoHelper.cs" />
     <Compile Include="Common\Bind\BindTipoContaHelper.cs" />
     <Compile Include="Common\Bind\BindUnidadeHelper.cs" />
@@ -416,6 +421,21 @@
     <Content Include="Areas\Erp\Views\Grupo\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Grupo\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Grupo\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaArea\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaArea\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaArea\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaArea\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaArea\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaRegra\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaRegra\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaRegra\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaRegra\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaRegra\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaTela\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaTela\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaTela\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaTela\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaTela\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
